# ai-customer-service-platform

./: .gitignore  README.md  package-lock.json  pom.xml
.github/: CODEOWNERS
ai-engine/: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
ai-engine/scripts/: check_embedding_dimension.py
ai-engine/sql/: 001_create_engine_database.sql  002_create_engine_schema.sql  README.md
ai-engine/src/aicsp_engine/: __init__.py  main.py
ai-engine/src/aicsp_engine/agent/: graph.py  nodes.py  policies.py  state.py
ai-engine/src/aicsp_engine/api/: routes_chat.py  routes_health.py  routes_rag.py
ai-engine/src/aicsp_engine/core/: __init__.py  config.py  prompts.py  trace.py
ai-engine/src/aicsp_engine/llm/: chat_model.py  clients.py  embedding_model.py
ai-engine/src/aicsp_engine/models/: chat.py  events.py  rag.py
ai-engine/src/aicsp_engine/observability/: events.py  metrics.py
ai-engine/src/aicsp_engine/rag/: chunking.py  ingestion.py  prompt_context.py  rerank.py  retriever.py  tasks.py
ai-engine/src/aicsp_engine/storage/: document_loader.py  minio.py  postgres.py  redis.py
ai-engine/src/aicsp_engine/tools/: biz_client.py  registry.py  schemas.py  stream_service.py
ai-engine/tests/contract/: test_chat_contract.py
ai-engine/tests/unit/: test_agent.py  test_chunking.py  test_document_loader.py  test_ingestion.py  test_retriever.py
biz-service/: pom.xml
common/: pom.xml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  rebuild.md  vite.config.ts
gateway-service/: pom.xml
stream-service/: pom.xml
(+312 files in other folders)
