[build-system]
requires = ["uv_build>=0.10.0,<0.11"]
build-backend = "uv_build"

[project]
name = "aicsp-engine"
version = "0.1.0"
description = "Python AI engine for ai-customer-service-platform"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.43.0",
    "pydantic==2.13.3",
    "pydantic-settings",
    "openai==2.32.0",
    "langchain==1.2.15",
    "langchain-openai==1.2.1",
    "langgraph==1.1.9",
    "langchain-postgres==0.0.17",
    "httpx",
    "psycopg[binary,pool]",
    "redis",
    "minio",
    "python-json-logger",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

